# C-DTE-2600

Klasserom/Klasserom1201/: CMakeLists.txt  main.cpp  testfredag.cpp  testfredag.h
Klasserom/build-Klasserom1201-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Klasserom/build-Klasserom1201-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-fcce52fea88719de79e0.json  codemodel-v2-4656af84fd97bc719832.json  directory-.-Debug-b8b475d03ffc21338dea.json  index-2024-01-12T11-50-52-0026.json  target-Klasserom1201-Debug-a1dcfd5805253876c27d.json
Klasserom/build-Klasserom1201-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-4d8ed8a2d2fdd155e9fa.json  cmakeFiles-v1-1536a841450f43752b0f.json  codemodel-v2-45a72ae83b44a134d09b.json  directory-.-Debug-71dd87a711d8460407c7.json  index-2024-01-12T11-44-54-0357.json  target-Klasserom1201-Debug-b7861c08aa4e7af40274.json
